# wot-battle-results-parser

./: .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  justfile  mkdocs.yml  test.txt
.github/workflows/: docs.yml  release.yml
datfile_parser/: Cargo.toml  README.md
datfile_parser/benches/: benchmark.rs
datfile_parser/example_outputs/: 19011713064132879.json
datfile_parser/examples/: 27729594706882889.json  28564648018373660.json  7533133759693209.json  art_of_strategy_tanker.json
datfile_parser/outputs/debug/: massif.out.10645
datfile_parser/outputs/release/: massif.out.14985
datfile_parser/src/: dev.rs  lib.rs  main.rs  parser.rs
datfile_parser/src/cli/: main.rs  parser.rs
datfile_parser/src/field_types/: account_all.rs  account_self.rs  common.rs  mod.rs  player_info.rs  vehicle_all.rs  vehicle_self.rs
datfile_parser/src/lib/: error.rs  fields.rs  lib.rs  manual_parser.rs  parser.rs  utils.rs
datfile_parser/src/lib/battle_results/: battle_result_fields.rs  checksum.rs  collection.rs  field_list.rs  mod.rs
datfile_parser/tests/: integration.rs
definition_parser/: Cargo.toml
definition_parser/src/: entity.rs  lib.rs  mod.rs  types.rs  utils.rs
docs/: index.md  supporting-new-wot-version.md
examples/datfile_parser_advanced/: Cargo.toml
examples/datfile_parser_advanced/src/: main.rs
examples/datfile_parser_simple/: Cargo.toml
examples/datfile_parser_simple/src/: main.rs
examples/replay_parser_example/: Cargo.toml
examples/replay_parser_example/src/: main.rs
examples/replay_parser_simple/: Cargo.toml
examples/replay_parser_simple/src/: main.rs
examples/replay_version_sorter/: Cargo.toml
examples/replay_version_sorter/src/: main.rs
field_access_derive/: Cargo.toml
field_access_derive/src/: lib.rs
macros/: Cargo.toml
macros/src/: enum_variant_deserialize.rs  event_debug_derive.rs  field_access_derive.rs  lib.rs  metadata_derive.rs  sql_insert_derive.rs  version_derive.rs
replay_db/: .env  Cargo.toml
replay_db/migrations/: 20220623021021_replay_common.sql  20220623095736_vehicle.sql  20220623095803_personal_vehicle.sql  20220623095822_details.sql  20220623095947_achievements.sql  20220625223315_player_info.sql  20220625231355_battle.sql
replay_db/src/: db.rs  main.rs
replay_db/src/schema/: details.rs  mod.rs  personal_vehicle.rs  player_info.rs  replay_common.rs  vehicle.rs
replay_parser/: Cargo.toml  build.rs  known_gotchas.md  packets.md
replay_parser/benches/: benchmark.rs
replay_parser/examples/: 20160603_2346_germany-G120_M41_90_GrandFinal_11_murovanka.wotreplay
replay_parser/input_files/: 20160604_1436_germany-G119_Pz58_Mutz_06_ensk.wotreplay  20160604_1907_germany-G119_Pz58_Mutz_22_slough.wotreplay  20160621_1116_usa-A94_T37_38_mannerheim_line.wotreplay  20160624_2021_usa-A35_Pershing_11_murovanka.wotreplay  20191017_1234_ussr-R95_Object_907_10_hills.wotreplay  20191019_0151_germany-G54_E-50_07_lakeville.wotreplay  20200502_0355_sweden-S26_Lansen_C_06_ensk.wotreplay  20200623_0522_usa-A92_M60_36_fishing_bay.wotreplay  20211205_2322_germany-G42_Maus_45_north_america.wotreplay  20211205_2330_germany-G72_JagdPz_E100_11_murovanka.wotreplay  20211208_1601_germany-G89_Leopard1_13_erlenberg.wotreplay  20220127_0851_germany-G58_VK4502P_10_hills.wotreplay  20220306_0941_france-F108_Panhard_EBR_105_45_north_america.wotreplay  20220312_2330_uk-GB98_T95_FV4201_Chieftain_59_asia_great_wall.wotreplay  20220418_2306_germany-G42_Maus_101_dday.wotreplay  example.wotreplay
replay_parser/src/: battle_context.rs  error.rs  event_printer.rs  lib.rs  main.rs  packet_stream.rs  replay_errors.rs  replay_parser.rs  utils.rs
replay_parser/src/def_parser/: entity.rs  mod.rs  types.rs  utils.rs
replay_parser/src/entity_defs/: avatar.rs  entity_types.rs  mod.rs  vehicle.rs
replay_parser/src/event/: battle_event.rs  event_stream.rs  mod.rs
replay_parser/src/event/event_types/: arena_status.rs  chat.rs  damage_received.rs  game_version.rs  mod.rs  position_update.rs  position_update_control.rs  shot_fired.rs  shot_took.rs  unknown.rs
replay_parser/src/json_parser/: mod.rs  schemas.rs
replay_parser/src/packet_parser/: context.rs  error.rs  event.rs  mod.rs  packet.rs  serde_packet.rs  types.rs
replay_parser/src/packet_parser/events/: avatar_create.rs  battle_event.rs  chat.rs  crypto_key.rs  entity_create.rs  entity_method.rs  entity_property.rs  event_stream.rs  game_version.rs  method_defs.rs  mod.rs  position.rs  position_update_control.rs  unknown.rs
replay_parser/src/packet_parser/events/entity_method/: mod.rs  other_methods.rs  update_arena.rs  vehicle_methods.rs  vehicle_misc_status.rs
replay_parser/src/packet_parser/events/entity_method/avatar_methods/: mod.rs
replay_parser/src/packet_parser/events/entity_method/avatar_methods/update_arena/: avatar_ready.rs  base.rs  fog_of_war.rs  mod.rs  period.rs  vehicle_added.rs  vehicle_descr.rs  vehicle_killed.rs  vehicle_list.rs  vehicle_statistics.rs  vehicle_updated.rs
replay_parser/src/packet_parser/events/entity_property/: avatar_props.rs  mod.rs  vehicle_props.rs
standard_format/: Cargo.toml
standard_format/src/: account_all.rs  account_self.rs  common.rs  lib.rs  player_info.rs  vehicle_all.rs  vehicle_self.rs  wot_value.rs
unpickler/: Cargo.toml
unpickler/src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs  pickle.rs
wot_constants/: Cargo.toml
wot_constants/src/: arena_bonus_types.rs  lib.rs
wot_constants/src/battle_results/: battle_result_fields.rs  mod.rs
wot_constants/src/battle_results/deprecated/: account_all.rs  account_self.rs  common.rs  player_info.rs  vehicle_all.rs  vehicle_self.rs
wot_constants/src/battle_results/field/: checksum.rs  collection.rs  field_list.rs  mod.rs
wot_constants/src/battle_results/field_types/: all_types.rs  battle_royale.rs  frontline.rs  maps_training.rs  mod.rs  random_arena.rs  ranked.rs
wot_types/: Cargo.toml
wot_types/src/: arena_attack_reasons.rs  arena_bonus_types.rs  arena_periods.rs  arena_update.rs  lib.rs
