[package]
name = "wot_datfile_parser"
version = "0.1.0"
edition = "2021"
authors = ["dacite <d4cite@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wot_datfile_parser"
path = "src/lib.rs"

[[bin]]
name = "wot-datfile-parser-cli"
path = "src/main.rs"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
unpickler = { path = "../unpickler" }
wot_constants = { path = "../wot_constants"}
anyhow = "1.0.52"
serde_json = "1.0.74"
serde-pickle = "1.1.0"
crc = "2.1.0"
standard_format = { path = '../standard_format'}