[package]
name = "wot_datfile_parser"
version = "0.2.1"
edition = "2021"
authors = ["dacite <d4cite@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wot_datfile_parser"
path = "src/lib/lib.rs"

[[bin]]
name = "wot_datfile_parser_dev"
path = "src/dev.rs"

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"
walkdir = "2"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
utils = { path = "../utils", package = "wot-battle-results-parser-utils", version = "0.1.0" }
wot_types = { path = "../wot_types"}
serde_json = "1.0.74"
serde-pickle = "1.1.0"
num-bigint = { version="0.4.3", features = ["serde"] }
serde = { version = "1.0.135", features = ["derive"] }
crc = "2.1.0"
base32 = "0.4.0"
directories = "4.0.1"
serde_with = { version = "1.12.0", features = ["hex"]}
hex = { version = "0.4.3" }
byteorder = "1.4.3"
nom = { version = "7.1.1", features = ["alloc"] }
thiserror = "1.0.30"
log = "0.4.16"
env_logger = "0.8.4"
miniz_oxide = "0.6.2"
itertools = "0.10.5"