[package]
name = "macros"
version = "0.1.0"
edition = "2021"
authors = ["dacite <d4cite@outlook.com>"]
description = "Macros for wot_replay_parser and wot_datfile_parser"
repository = "https://github.com/dacite/wot-battle-results-parser"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.93"
quote = "1.0"
proc-macro2 = "1.0.36"
convert_case = "0.5.0"
