[package]
name = "replay_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sqlite"
path = "src/main.rs"


[dependencies]
macros = { path = "../macros"}
anyhow = "1.0.58"
dotenv = "0.15.0"
serde = { version = "1.0.137", features = ["derive"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite", "json" ] }
tokio = { version = "1.19.2", features = ["full"] }
wot_replay_parser = { git = "https://github.com/dacite/wot-battle-results-parser", branch = "replay_events_parser" }
serde_json = "1.0.81"
crc = "2.1.0"

[profile.dev.package.sqlx-macros]
opt-level = 3
