[package]
name = "wot_replay_parser"
version = "0.1.0"
edition = "2021"
authors = ["dacite <d4cite@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wot_replay_parser"
path = "src/lib.rs"

[[bin]]
name = "wot_replay_parser"
path = "src/main.rs"

[[bin]]
name = "event_printer"
path = "src/event_printer.rs"

[dependencies]
utils = { path = "../utils" }
anyhow = "1.0.52"
miniz_oxide = "0.4.4"
byteorder = "1.4.3"
hex = "0.4.3"
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
macros = { path = "../macros"}
time = "0.3.7"
nom = { version = "7.1.1", features = ["alloc"] }
thiserror = "1.0.31"
serde-pickle = "1.1.0"
standard_format = { path = '../standard_format'}
unpickler = { path = "../unpickler" }
serde_bytes = "0.11.6"
bimap = "0.6.2"
tracing = "0.1.35"
tracing-subscriber = { version= "0.3.14", features = ["registry"] }
phf = "0.11.0"
definition_parser = { path = "../definition_parser" }
blowfish = "0.9.1"

[build-dependencies]
phf_codegen = "0.11.0"
definition_parser = { path = "../definition_parser" }

[dev-dependencies]
criterion = "0.3.5"
env_logger = "0.8.4"

[[bench]]
name = "benchmark"
harness = false
