[package]
name = "standard_format"
version = "0.1.0"
edition = "2021"
authors = ["dacite <d4cite@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-pickle = "1.1.0"
unpickler = { path = "../unpickler" }
anyhow = "1.0.52"
miniz_oxide = "0.5.1"
serde = { version = "1.0.135", features = ["derive"] }
field_access_derive = { path = "../field_access_derive"}

[dependencies.num]
version = "0.3"
features = ["serde"]