[package]
name = "standard_format"
version = "0.1.0"
edition = "2021"
authors = ["dacite <d4cite@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-pickle = "1.1.0"
serde_json = "1.0.68"
unpickler = { path = "../unpickler" }
serde = { version = "1.0.135", features = ["derive"] }
macros = { path = "../macros"}
anyhow = "1.0.52"


# [dependencies.num]
# version = "0.3"
# features = ["serde"]