[package]
name = "standard_format"
version = "0.1.0"
edition = "2021"
authors = ["dacite <d4cite@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-pickle = "1.1.0"
serde_json = "1.0.68"
serde = { version = "1.0.135", features = ["derive"] }
anyhow = "1.0.52"
