[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
serde = { version = "1.0.137", features = ["derive"] }
serde-pickle = "1.1.1"
miniz_oxide = "0.6.2"
thiserror = "1.0.37"
