[package]
name = "wot-battle-results-parser-utils"
version = "0.1.0"
edition = "2021"
authors = ["dacite <d4cite@outlook.com>"]
description = "Utility code for wot_replay_parser and wot_datfile_parser"
repository = "https://github.com/dacite/wot-battle-results-parser"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
serde = { version = "1.0.137", features = ["derive"] }
serde-pickle = "1.1.1"
miniz_oxide = "0.6.2"
thiserror = "1.0.37"
