[package]
name = "wot_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["serde_derive"] }
serde_bytes = "0.11.7"
serde_with = { version = "2.0.1", features = ["hex"] }
