[package]
name = "wot_types"
version = "0.1.0"
edition = "2021"
authors = ["dacite <d4cite@outlook.com>"]
description = "Describes some of the constant types used in World of Tanks source code"
repository = "https://github.com/dacite/wot-battle-results-parser"
license = "MIT"

[dependencies]
num_enum = "0.5.7"
serde = { version = "1.0.147", features = ["serde_derive"] }
serde_bytes = "0.11.7"
serde_with = { version = "2.0.1", features = ["hex"] }
strum = { version = "0.24.1", features = ["derive"] }
