[package]
name = "replay_parser_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wot_replay_parser = { path = "../../replay_parser" }
tracing-subscriber = { version= "0.3.14", features = ["registry"] }
tracing-bunyan-formatter = "0.3.3"
tracing = "0.1.35"
utils = { path = "../../utils" }
rayon = "1.5.3"
walkdir = "2.3.2"